1. index.html 밑줄 추가 2. NotificationCenter Post

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@ layout: default
       {{ post.content }}
       {% endif %}
     </article>
-    <hr />
+    <br>
+    <hr style="border: dotted 5px gray;">
+    <hr style="border: dotted 5px gray;">
+
 
     {% endfor %}
 
